--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=../appcompat_v7
+android.library=false
+android.library.reference.1=../../AndroidWorkspace/android-support-v7-appcompat
