--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-23
 android.library=false
-android.library.reference.1=../../AndroidWorkspace/android-support-v7-appcompat
+android.library.reference.1=../appcompat_v7
