--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".MapActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".PositionActivity"
+            android:label="@string/app_name" >
+        </activity>
 
         <meta-data
             android:name="ShituKey"
