--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".PositionActivity"
+            android:name="com.ubirouting.ubimapdemo.PositionActivity"
             android:label="@string/app_name" >
         </activity>
 
